# fabulist

./: .gitignore  .markdownlint.json  COPYRIGHT  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  package-lock.json  package.json  webpack.config.js
compiler/fabc/: Cargo.toml
compiler/fabc/src/: bundle.rs  compiler.rs  error.rs  lib.rs
compiler/fabc/src/commands/: compile.rs
compiler/fabc_derive/: Cargo.toml
compiler/fabc_derive/src/: ast.rs  lib.rs
compiler/fabc_derive/tests/: all.rs  ast.rs
compiler/fabc_lexer/: Cargo.toml
compiler/fabc_lexer/benches/: lexer_bench.rs
compiler/fabc_lexer/src/: error.rs  keywords.rs  lib.rs  tokens.rs
compiler/fabc_llvm/: Cargo.toml
compiler/fabc_llvm/src/: compile.rs  error.rs  lib.rs  link.rs
compiler/fabc_llvm/src/frontend/: lower.rs
compiler/fabc_llvm/src/ir/: mod.rs  stmt.rs  story.rs
compiler/fabc_llvm/src/llvm/: abi.rs  emitter.rs  mod.rs
compiler/fabc_llvm/src/runtime/: engine.rs  mod.rs  native.rs  value.rs
compiler/fabc_parser/: Cargo.toml
compiler/fabc_parser/benches/: parser_bench.rs  parser_comparison.rs
compiler/fabc_parser/src/: ast.rs  error.rs  error2.rs  lib.rs  macros.rs
compiler/fabc_parser/src/ast/: decl.rs  expr.rs  init.rs  literal.rs  primitive.rs  stmt.rs  story.rs
compiler/fabc_parser/src/ast/decl/: argument_body.rs  object.rs  parameter_body.rs  quote.rs
compiler/fabc_parser/src/ast/decl/snapshots/: fabc_parser__ast__decl__object__tests__parses_object_decl.snap  fabc_parser__ast__decl__quote__tests__parses_quote_decl_with_properties.snap  fabc_parser__ast__decl__quote__tests__parses_quote_decl_without_properties.snap
compiler/fabc_parser/src/ast/expr/: literal.rs  primary.rs  primitive.rs
compiler/fabc_parser/src/ast/expr/snapshots/: fabc_parser__ast__expr__literal__tests__literal_false.snap  fabc_parser__ast__expr__literal__tests__literal_none.snap  fabc_parser__ast__expr__literal__tests__literal_number.snap  fabc_parser__ast__expr__literal__tests__literal_string.snap  fabc_parser__ast__expr__literal__tests__literal_true.snap  fabc_parser__ast__expr__primitive__tests__basic_context.snap  fabc_parser__ast__expr__primitive__tests__basic_grouping.snap  fabc_parser__ast__expr__primitive__tests__basic_identifier.snap  fabc_parser__ast__expr__primitive__tests__basic_story_identifier.snap  fabc_parser__ast__expr__primitive__tests__parses_closure_primitive.snap  fabc_parser__ast__expr__primitive__tests__parses_object_primitive.snap
compiler/fabc_parser/src/ast/init/: module.rs  story.rs
compiler/fabc_parser/src/ast/init/snapshots/: fabc_parser__ast__init__module__tests__parses_module_init_with_alias.snap  fabc_parser__ast__init__module__tests__parses_module_init_without_alias.snap  fabc_parser__ast__init__story__tests__parses_basic_story.snap  fabc_parser__ast__init__story__tests__parses_story_with_metadata_and_modules.snap
compiler/fabc_parser/src/ast/init/story/: metadata.rs  part.rs
compiler/fabc_parser/src/ast/init/story/part/: element.rs
compiler/fabc_parser/src/ast/init/story/part/element/: dialogue.rs  narration.rs  selection.rs
compiler/fabc_parser/src/ast/init/story/part/element/snapshots/: fabc_parser__ast__init__story__part__element__dialogue__tests__parses_dialogue_element.snap  fabc_parser__ast__init__story__part__element__narration__tests__parses_narration_with_properties.snap  (+2 more)
compiler/fabc_parser/src/ast/init/story/snapshots/: fabc_parser__ast__init__story__metadata__tests__parses_metadata.snap  fabc_parser__ast__init__story__part__tests__parses_part.snap
compiler/fabc_parser/src/ast/snapshots/: fabc_parser__ast__expr__tests__parses_arithmetic_binary_expr.snap  fabc_parser__ast__expr__tests__parses_assignment_expr.snap  fabc_parser__ast__expr__tests__parses_call_expr.snap  fabc_parser__ast__expr__tests__parses_comparison_expr.snap  fabc_parser__ast__expr__tests__parses_equality_expr.snap  fabc_parser__ast__expr__tests__parses_logical_expr.snap  fabc_parser__ast__expr__tests__parses_member_access_expr.snap  fabc_parser__ast__expr__tests__parses_unary_expr.snap
compiler/fabc_parser/src/ast/stmt/: block.rs  expr.rs  function.rs  goto.rs  if.rs  let.rs  module.rs  return.rs
compiler/fabc_parser/src/ast/stmt/snapshots/: fabc_parser__ast__stmt__block__tests__parses_block_statements.snap  fabc_parser__ast__stmt__expr__tests__parses_expr_statements.snap  fabc_parser__ast__stmt__goto__tests__parses_goto_statements.snap  fabc_parser__ast__stmt__r#if__tests__parses_if_stmt_with_else_block.snap  fabc_parser__ast__stmt__r#if__tests__parses_if_stmt_without_else.snap  fabc_parser__ast__stmt__r#let__tests__parses_let_statements.snap  fabc_parser__ast__stmt__r#return__tests__parses_return_with_value.snap  fabc_parser__ast__stmt__r#return__tests__parses_return_without_value.snap
compiler/fabc_parser/src/ast/story/: metadata.rs  part.rs
compiler/fabc_parser/src/ast/story/part/: element.rs
compiler/fabc_parser/src/ast/story/part/element/: dialogue.rs  narration.rs  selection.rs
compiler/fabc_parser/src/ast/story/part/element/dialogue/: quote.rs
compiler/fabc_parser/src/ast/story/part/element/selection/: choice.rs
compiler/fabc_vm/: Cargo.toml
compiler/fabc_vm/src/: bytecode.rs  chunk.rs  error.rs  instructions.rs  lib.rs  program.rs  translator.rs  value.rs
compiler/fabc_vm/src/translator/: implementations.rs
compiler/fabc_vm/src/translator/implementations/: expr.rs
compiler/fabc_vm/src/translator/implementations/snapshots/: fabc_vm__translator__implementations__expr__tests__translates_binary_expression.snap  fabc_vm__translator__implementations__expr__tests__translates_boolean_literal.snap  fabc_vm__translator__implementations__expr__tests__translates_identifier.snap  fabc_vm__translator__implementations__expr__tests__translates_none_literal.snap  fabc_vm__translator__implementations__expr__tests__translates_number_literal.snap  fabc_vm__translator__implementations__expr__tests__translates_string_literal.snap  fabc_vm__translator__implementations__expr__tests__translates_unary_expression.snap
compiler/fabc_vm/tests/: expr_interprets.rs
(+82 files in other folders)
