[package]
name = "fabulist-core"
version = "0.1.0"
edition = "2021"
description = "A branching narrative engine"
keywords = ["story", "gamedev", "narrative"]
categories = ["story"]
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/daverencordero/fabulist-core"
authors = ["Daveren Cordero <daverencordero@gmail.com>"]
