[package]
name = "fabc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true

fabc_lexer = { path = "../fabc_lexer" }
fabc_parser = { path = "../fabc_parser" }
fabc_vm = { path = "../fabc_vm" }

[lib]
bench = false
