[package]
name = "fabc_derive"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"
proc-macro = true

[[test]]
name = "all"
path = "tests/all.rs"

[dependencies]
syn = "2.0.111"
quote = "1.0.42"
proc-macro2 = "1.0.103"
prettyplease = { version = "0.2.17", optional = true }

[dev-dependencies]
trybuild = "1.0.114"

[features]
default = []
debug = ["dep:prettyplease"]
