[package]
name = "fabc_lexer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dev-dependencies]
criterion.workspace = true

fabc_reg_test = { path = "../fabc_reg_test" }

[[bench]]
name = "lexer_bench"
harness = false
path = "benches/lexer_bench.rs"

[lib]
bench = false
