[package]
name = "fabc_parser"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true

fabc_lexer = { path = "../fabc_lexer" }
fabulist_lang = { path = "../../packages/fabulist_lang" }
criterion.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "parser_comparison"
harness = false
