[package]
name = "fabc_parser"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true

fabc_lexer = { path = "../fabc_lexer" }

[dev-dependencies]
criterion.workspace = true

fabc_reg_test = { path = "../fabc_reg_test" }

[[bench]]
name = "parser_bench"
harness = false
path = "benches/parser_bench.rs"

[lib]
bench = false
