[package]
name = "fabc_parser"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
fabc_lexer = { path = "../fabc_lexer" }
fabc_error = { path = "../fabc_error" }

[dev-dependencies]
criterion.workspace = true
insta = { version = "1", features = ["glob"] }

fabc_reg_test = { path = "../fabc_reg_test" }
[[bench]]
name = "parser_bench"
harness = false
path = "benches/parser_bench.rs"

[lib]
bench = false
