[package]
name = "fabc_vm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true

fabc_parser = { path = "../fabc_parser" }
fabc_analyzer = { path = "../fabc_analyzer" }

[dev-dependencies]
criterion.workspace = true
insta.workspace = true

fabc_lexer = { path = "../fabc_lexer" }

[lib]
bench = false
